release: prepare v0.1.0-beta.16
